# webcam-toggle

./: Cargo.toml  LICENSE  README.md  build.rs  webcam-toggle-manifest.rc  webcam-toggle.exe.manifest
.cargo/: config.toml
src/: main.rs
